Fix start page layout on mobile devices

--- a/client/pages/startpage/page-start.less
+++ b/client/pages/startpage/page-start.less
@@ -62,10 +62,6 @@
     margin-left: auto;
     position: relative;
     width:100%;
-    // height:100%;
-    // left:0;
-    // top:0;
-    //background-color: rgba(255,255,255,0.8);
     z-index: 1000;
 
     display: flex;
@@ -73,35 +69,46 @@
     flex-wrap: wrap;
 
     h1 {
+      position: relative;
       display: inline-block;
-      padding-top: 15px;
-      margin-top:0;
+      max-width: 100%;
+      margin-top: 0.2em;
       margin-bottom: 0;
-      margin-left: 10px;
+      margin-left: 0.4em;
       .type-light;
       .font-l3;
       text-shadow: 0 0 1px white;
+      @media (max-width: 400px) {
+        font-size: 38px;
+      }
+      line-height: 1;
 
-      small {
-        padding-left: 93px;
+      img.icon {
+        float: left;
+        height: 0.7em;
+        vertical-align: top;
+        margin-top: 0.2em;
+        margin-right: 0.2em;
+      }
+
+      span {
+        display: inline-block;
+      }
+
+      .text-part {
+        float: left;
+        width: calc(~"100% - 2em");
+        left: 1.2em;
+        top: 0;
+      }
+
+      .claim {
         display: block;
         .type-regular;
         .font-s2;
         text-transform: uppercase;
         letter-spacing: 1px;
-      }
-
-      &:before {
-        content: " ";
-        position: relative;
-        display: inline-block;
-        margin-right: -17px;
-        left: 0;
-        top: 16px;
-        width: 93px;
-        height: 57px;
-        background: url(images/ac-logo-dark.png) center center no-repeat;
-        background-size: cover;
+        margin-left: 0.2em;
       }
     }
 
@@ -173,7 +180,7 @@
   max-width: @max-page-width;
   margin-left: auto;
   margin-right: auto;
-  padding:1.5em 2em;
+  padding: 1.5em 2em;
 
   &:last-child {
     border: none;
@@ -228,6 +235,9 @@ div.area.statistics {
 .claim.area, .about.area {
   text-align: center;
   max-width: 50em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   h2 {
     .font-l1;
@@ -236,7 +246,7 @@ div.area.statistics {
   }
 
   p {
-    margin: 1em 0;
+    margin: 1em;
   }
 
   p:last-child {
@@ -247,13 +257,20 @@ div.area.statistics {
 .page.content.block.benefits.area {
   display: flex;
   justify-content: center;
+  align-items: center;
   padding-bottom: 0;
+  @media (max-width: 768px) {
+    flex-direction: column;
+  }
 
   .on-white {
-    width: 24em;
     padding: 2em;
-    margin: 0 1em;
+    margin: 1em 0em;
     background-color: white;
+    @media (min-width: 768px) {
+      width: 24em;
+      margin: 1em;
+    }
 
     h3 {
       margin-top: 0;
@@ -322,7 +339,6 @@ div.area.statistics {
 
   > p {
     max-width: 50em;
-    margin: auto;
     .type-light;
   }
 }
@@ -350,12 +366,15 @@ div.area.statistics {
       display: flex;
       justify-content: center;
       align-items: center;
+      @media (max-width: 600px) {
+        flex-direction: column;
+      }
 
       a.partner.logo {
         display: inline-block;
         height:50px;
         width:200px;
-        margin-bottom: 10px;
+        margin: 0.5em;
         background-position: center center;
         background-repeat: no-repeat;
         background-size: contain;
